# casadi_test

./: CMakeLists.txt  README.md  install_casadi.sh
src/: casadi_test.cpp
